--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,25 @@
     <style>
       * {
         margin: 0;
+        scrollbar-width: thin;
+        scrollbar-color: lightgray;
+      }
+
+      ::-webkit-scrollbar {
+        width: 7px;
+        height: 7px;
+        background-color: #f5f5f5;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1); */
+        background-image: -webkit-linear-gradient(
+          330deg,
+          lightgray 0%,
+          lightgray 100%
+        );
+        background-image: linear-gradient(120deg, lightgray 0%, lightgray 100%);
       }
     </style>
     <title>Post CRUD App</title>
